# Agentic-AI-Robotics

00_theoratical_findings/00_which_llms/: readme.md
00_theoratical_findings/03_llm_to_stateful_long_Multi_Agents/: readme.md
01_AI_Agents_Firsts/01_UV_pakgmangr/uv_project/uv_project_op_ag/: pyproject.toml
01_AI_Agents_Firsts/01_UV_pakgmangr/uv_project/uv_project_op_ag/src/uv_project_op_ag/: __init__.py
01_AI_Agents_Firsts/02_hello_agents/async_hello_agent/async_op_ag/: pyproject.toml
01_AI_Agents_Firsts/02_hello_agents/async_hello_agent/async_op_ag/src/async_op_ag/: main.py
01_AI_Agents_Firsts/02_hello_agents/sync_hello_agent/sync_op_ag/: pyproject.toml
01_AI_Agents_Firsts/03_chatBots/chainlit_Ai_Agent_with_history/hello_op_ag/: pyproject.toml
01_AI_Agents_Firsts/03_chatBots/chainlit_agent_without_chat History/hello_op_ag/src/hello_op_ag/: hello.py
01_AI_Agents_Firsts/04_streaming/: streaming.ipynb  streaming_gemini.ipynb
01_AI_Agents_Firsts/05_Tools/: tools.ipynb  tools_openai_agents_sdk.ipynb
01_AI_Agents_Firsts/05_Tools/weather_agent/agent_op_ag/: .env
01_AI_Agents_Firsts/05_Tools/weather_agent/agent_op_ag/src/agent_op_ag/: agent.py
02_hello_agents/async_hello_agent/async_op_ag/src/async_op_ag/: __init__.py
02_hello_agents/chainlit_Ai_Agent_with_history/hello_op_ag/: pyproject.toml
02_hello_agents/chainlit_agent_without_chat History/hello_op_ag/: pyproject.toml
02_hello_agents/chainlit_agent_without_chat History/hello_op_ag/src/hello_op_ag/: __init__.py
02_hello_agents/sync_hello_agent/sync_op_ag/: pyproject.toml
02_hello_agents/sync_hello_agent/sync_op_ag/src/sync_op_ag/: __init__.py  main.py
