[project]
name = "hello-op-ag"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
authors = [
    { name = "muazam mughal", email = "104276759+MuazamMughal@users.noreply.github.com" }
]
requires-python = ">=3.11"
dependencies = [
    "chainlit>=2.3.0",
    "openai-agents",
]
[tool.hatch.build.targets.wheel]
packages = ["src/hello_op_ag"]

[project.scripts]
hello-op-ag = "hello_op_ag:main"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"
