[project]
name = "hello-op-ag"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
authors = [
    { name = "muazam mughal", email = "104276759+MuazamMughal@users.noreply.github.com" }
]
requires-python = ">=3.11"
dependencies = [
    "chainlit>=2.5.5",
    "openai-agents>=0.0.14",
]

[project.scripts]
hello-op-ag = "hello_op_ag:main"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"
